# starlink

./: .cvsignore  .gitignore  .gitmodules  Makefile.dependencies  Makefile.in  README  bootstrap  clean-modules  componentset.xml  configure  configure.ac  configure.ac.in  macos_fixup_gfortranlibs.sh  macos_postbuild_library_fixup  macos_postbuild_library_fixup.sh  remove-modules  sourceme-example.csh  sourceme-example.sh  update-modules
applications/: Makefile.in  bootstrap  configure  configure.ac
applications/astrom/: .cvsignore  .gitignore  Makefile.am  NOTES  astrml.f  astrom  astrom-changes.txt  astrom.f  astrom.f_mips  astrom.news  astrom_link  astromtest  bootstrap  cocomm.f  cocomo.f  cocoom.f  component.xml  component.xml.in  configure  configure.ac  dummy_c.c  eqep.f  indat.f  makefile  makefile.in  mk  opr.F  opr.fpp  params.f.in  params.inc  radec.f  rdcal.f  read.me  sun5.bib  sun5.tex  transf.f  wfwcs0.f
applications/atools/: .cvsignore  .gitignore  Makefile.am  addframe.f  astaddframe.f  astaddpixelmask.f  astaddregion.f  astaddvariant.f  astangle.f  astbox.f  astchebydomain.f  astchebymap.f  astcircle.f  astclear.f  astcmpframe.f  astcmpmap.f  astcmpregion.f  astconvert.f  astconvex.f  astcopy.f  astdecompose.f  astdistance.f  astdownsize.f  astdsbframe.f  astellipse.f  astfindframe.f  astfluxframe.f  astformat.f  astframe.f  astframeset.f  astfromhds.f  astget.f  astgetactiveunit.f  astgetactunit.f  astgetframe.f  astgetmapping.f  astgetrefpos.f  astgetregbounds.f  astgetregdisc.f  astgetregframe.f  (+113 more)
applications/autoastrom/: LICENCE.Starlink  Makefile.in  README.Licence  README.Starlink  VERSION  autoastrom  autoastrom.news  autoastrom.pl  autoastrom.pm  bootstrap  configure  configure.ac  makefile  makefile.in  mk  plugin-match-match.pl
applications/ccdpack/: .cvsignore  .gitignore  Buttoncontrol.tcl  CCD1_CACM  CCD1_FDCM  CCD1_FITCM  CCD1_MEMCM  CCD1_MOSCM  CCD1_MOSPR  CCD1_PAR  CCD1_PAR.in  CCD1_TMPCM  CCDAddSetHeaders.tcl  CCDAddSetItems.tcl  CCDAnimateBitmap.tcl  CCDBindings.tcl  CCDCcdWidget.tcl  CCDCentreWindow.tcl  CCDCheckReduce.tcl  CCDCmdOf.tcl  CCDContainerFile.tcl  CCDContextHelp.tcl  CCDCopyListbox.tcl  CCDCreateImportTable.tcl  CCDCreateListofNames.tcl  CCDDialog.tcl  CCDDoAddSetHeaders.tcl  CCDDoPresent.tcl  CCDDoReduce.tcl  CCDDoSetGlobals.tcl  CCDExit.tcl  CCDExtractFitsFromNDF.tcl  CCDFITSDoImport.tcl  CCDFITSImport.tcl  CCDFileMonitorMain.tcl  CCDFileToNDFName.tcl  CCDFixConvert.tcl  CCDGeomCheckandExit.tcl  CCDGeomDrawCommand.tcl  CCDGeomSetPercent.tcl  (+221 more)
applications/coco/: .cvsignore  .gitignore  Makefile.am  coco  coco.in  coco.news  cocomain.f  cocoml.f  component.xml  component.xml.in  configure.ac  dp.f  dqp.f  dr2tn.f  ktest.f  makefile  mk  opr.F  opr.f_convex  opr.f_mips  opw.f  opw.f_convex  par1.f  prompt.f  r2dr.f  read.me  repra.f  repres.f  repsys.f  sun56.tex  tran.f
applications/convert/: .cvsignore  .gitignore  CONVERT_CONDITIONS  IDL_converters.hlp  Makefile.am  Parameters.hlp  Running_from_a_Unix_Shell.hlp  TODO.lis  Using_Help.hlp  ascii2ndf.f  ascii2ndf.ifl  ast2ndf.f  ast2ndf.ifl  bdf2ndf.f  bdf2ndf.ifl  component.xml  component.xml.in  configure.ac  conhelp.f  conhelp.ifl  convert.com  convert.csh.in  convert.f  convert.hlp  convert.icl.in  convert.news  convert.sh.in  convert_link_adam  convert_master.hlp  convert_mon.f  convert_mon.fpp  convert_mon.ifl  convertawk  convertndf  da2ndf.f  da2ndf.ifl  dipso2ndf.f  dipso2ndf.ifl  dst2ndf.f  dst2ndf.ifl  (+49 more)
applications/cupid/: .cvsignore  .gitignore  Makefile.am  TODO  clumpinfo.c  clumps.c  component.xml  component.xml.in  configure.ac  cupid.h.source  cupid.ifd.in  cupid.news  cupid.star-hlp  cupid_err.msg  cupid_link_adam  cupid_mon.c  cupidhelp.c  cupidtest.sh  extractclumps.c  findback.c  findclumps.c  make_doc.in  make_h.in  make_history_help.in  make_quickdes  make_quickdes.in  makeclumps.c  makesnr.c  outlineclump.csh  outlineclump.sh  sun255.tex  sun_master.tex  test_data.FIT  test_data.sdf
applications/cursa/: .cvsignore  .gitignore  CURSA_CONDITIONS  Makefile.am  catcdsin  catcdsin.in  catchart.ifl  catchartrn.ifl  catcoord.ifl  catcopy.ifl  catgrid.ifl  catgscin.ifl  catheader.ifl  catpair.ifl  catphotomfit.ifl  catphotomlst.ifl  catphotomtrn.ifl  catremote  catremote-setup.csh  catremote.in  catselect.ifl  catsort.ifl  catview.f  catview.ifl  component.xml  component.xml.in  configure.ac  cursa.csh  cursa.csh.in  cursa.f  cursa.ifl  cursa.news  cursa.sh.in  cursa_link_adam  cursa_source.tar  cursa_test.csh  cursa_test.csh.in  geturl.c  geturl.in  makefile  (+7 more)
applications/daophot/: .cvsignore  .gitignore  Makefile.am  addstar.f  aif_antmp.f  aif_temp.f  allstar.f  allstar.opt  allstsubs.f  component.xml  component.xml.in  configure.ac  curator.tex  dao_alloc.f  dao_askfile.f  dao_attach.f  dao_byebye.f  dao_case.f  dao_clfile.f  dao_clpic.f  dao_coppic.f  dao_deall.f  dao_delpic.f  dao_fabort.f  dao_infile.f  dao_list.f  dao_oops.f  dao_outfil.f  dao_ovrwrt.f  dao_rdaray.f  dao_wraray.f  daocurs.f  daocurs.ifl  daogrey.f  daogrey.ifl  daophot.csh  daophot.csh.in  daophot.f  daophot.news  daophot.opt  (+24 more)
applications/datacube/: .cvsignore  .gitignore  CUB1_PAR  Makefile.am  checkndf.csh  compare.csh  compare_x.csh  component.xml  component.xml.in  configure.ac  copyaxis.ifl  datacube.csh  datacube.csh.in  datacube.icl.in  datacube.news  datacube.sh.in  datacube_gen.tar  datacube_help.tar  datacube_link_adam  datacube_master.hlp  datacube_mon.f  datacube_mon.ifl  datacube_source.tar  datacube_subs.tar  getbound.ifl  getcurpos.csh  getfitcon.csh  gridspec.csh  make_fitgauss_table.csh  makefile  mapbyvel.csh  mk  multistack.csh  passband.csh  peakmap.csh  putaxis.ifl  pvslice.csh  ripper.csh  sc16_cover.eps  sc16_mosaic.eps  (+12 more)
applications/dipso/: .cvsignore  .gitignore  DECLARE_DATA  DECLARE_LBLS  DECLARE_PLTS  DECLARE_STKS  DEMO1.sdf  DEMO1_STK.sdf  DEMO2.sdf  DSB_CLR  KARS_COM  KUSE_COM  LWPLO.ABS  LWRLO.ABS  Makefile.am  SWP27857L.ULD  (+257 more)
docs/: README  configure.ac
etc/: configure.ac
libraries/: .cvsignore  Makefile.in  bootstrap  configure  configure.ac
(+39521 files in other folders)
