dnl    Process this file with autoconf to produce a configure script
AC_REVISION($Revision$)
AC_INIT(star-applications, 1.0, ussc@star.rl.ac.uk)
dnl    Following sanity-check isn't terribly helpful...
AC_CONFIG_SRCDIR(bootstrap)

AM_INIT_AUTOMAKE

dnl    The following list must be kept up-to-date by hand
dnl    (must be kept on one line)
AC_CONFIG_SUBDIRS(messgen)

AC_CONFIG_FILES(Makefile)

AC_OUTPUT
